--- a/lab_1/rezyserowie.html
+++ b/lab_1/rezyserowie.html
@@ -18,8 +18,56 @@
             <a href="kontakt.html">Kontakt</a>
         </nav>
     </header>
+    <div>
+        <table>
+            <tr>
+                <th>Zdjęcie</th>
+                <th>Reżyser</th>
+                <th>Filmografia</th>
+            </tr>
+            <tr>
+                <td><img src="Images/tarantino.jfif" alt="tarantino"></td>
+                <td>Quentin Tarantino</td>
+                <td>
+                    <p>Pulp Fiction (1994) - Kultowy film z nieliniową fabułą, który stał się jednym z najważniejszych dzieł kina lat 90.</p>
+                    <p>Wściekłe psy (1992) - Debiutancki film Tarantino, pełen napięcia i inteligentnych dialogów.</p>
+                    <p>Bękarty wojny (2009) - Alternatywna wersja historii II wojny światowej, pełna humoru i intensywnych scen.</p>
+                    <p>Kill Bill: Vol. 1 (2003) i Vol. 2 (2004) - Dwuczęściowy film o zemście, łączący różne style filmowe i inspiracje.</p>
+                    <p>Django (2012) - Western o wyzwoleniu niewolnika i zemście, z nagrodzoną Oscarem rolą Christopha Waltza.</p>
+                    <p>Pewnego razu... w Hollywood (2019) - Nostalgiczne spojrzenie na Hollywood lat 60., z Leonardo DiCaprio i Bradem Pittem w rolach głównych.</p>
+                    <p>Nienawistna ósemka (2015) - Kameralny western, którego akcja toczy się głównie w jednym miejscu, pełen napięcia i brutalnych zwrotów akcji.</p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="Images/Kubrick.jpg" alt="Kubrick"></td>
+                <td>Stanley Kubrick</td>
+                <td>
+                    <p>2001: Odyseja kosmiczna (1968) - Przełomowy film science fiction, znany z wizjonerskiej reżyserii i filozoficznego podejścia do tematu ludzkiej ewolucji.</p>
+                    <p>Lśnienie (1980) - Kultowy horror oparty na powieści Stephena Kinga, z genialną rolą Jacka Nicholsona.</p>
+                    <p>Mechaniczna pomarańcza (1971) - Kontrowersyjny film opowiadający o przemocy i manipulacji, oparty na powieści Anthony'ego Burgessa.</p>
+                    <p>Full Metal Jacket (1987) - Film o wojnie w Wietnamie, który ukazuje brutalną rzeczywistość szkolenia wojskowego i samej wojny.</p>
+                    <p>Barry Lyndon (1975) - Piękny wizualnie dramat kostiumowy, opowiadający o losach XVIII-wiecznego awanturnika.</p>
+                    <p>Lolita (1962) - Adaptacja kontrowersyjnej powieści Vladimira Nabokova, opowiadająca o niezdrowej obsesji mężczyzny na punkcie młodej dziewczyny.</p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="Images/Nolan.jpg" alt="Nolan"></td>
+                <td>Christopher Nolan</td>
+                <td>
+                    <p>Incepcja (2010) - Thriller science fiction, w którym Leonardo DiCaprio wciela się w rolę złodzieja potrafiącego wkradać się do snów, eksplorując granice podświadomości.</p>
+                    <p>Mroczny Rycerz (2008) - Druga część trylogii o Batmanie, uważana za jeden z najlepszych filmów superbohaterskich, z niezapomnianą rolą Heatha Ledgera jako Jokera.</p>
+                    <p>Interstellar (2014) - Epicki film science fiction, w którym bohaterowie wyruszają na podróż międzygwiezdną, aby odnaleźć nowy dom dla ludzkości.</p>
+                    <p>Batman: Początek (2005) - Pierwszy film z trylogii Batmana, ukazujący genezę Mrocznego Rycerza i jego walkę z przestępczością w Gotham.</p>
+                    <p>Mroczny Rycerz Powstaje (2012) - Ostatnia część trylogii, zamykająca historię Batmana w epickim stylu.</p>
+                    <p>Tenet (2020) - Skomplikowany thriller science fiction, opowiadający o agentach próbujących zapobiec globalnej katastrofie, z motywem odwracania czasu.</p>
+                </td>
+            </tr>
+        </table>
+    </div>
 
-    <footer>
-        <p>Przewodowski Łukasz 169354</p>
-    </footer>
+    <div class = "footer-container">
+        <footer>
+            <p>Przewodowski Łukasz 169354</p>
+        </footer>
+    </div>  
 </body>
