--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl"></html>
+<html lang="pl">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,24 +19,25 @@
             <a href="kontakt.html">Kontakt</a>
         </nav>
     </header>
-        <div class="content">
-            <section class="body-heading">
+        <div class=" heading-container">
             <h1>Witaj na stronie poświeconej Filmom nagrodzym Oscarami</h1>
             <h2>Znajdziesz tutaj przegląd najlepszych filmów,aktorów i reżyserów w historii</h2>
-            </section>
-            <article>
-                <h3><i>Historia statuetki Oscara</i></h3>
-                <p>Amerykańska Akademia Sztuki i Wiedzy Filmowej przyznaje swoje nagrody od <span> 1929 </span> roku i do tej pory rozdała ponad 3100 statuetek, które trafiły w ręce filmowców z całego świata. Nie ulega wątpliwości, że jest to obok Nobla najsłynniejsza nagroda na świecie, a w kategorii filmowej nie ma sobie równych.</p>
-                <p>Pomysłodawcą rozdawania nagród filmowych jest Academy of Motion Picture Arts and Sciences, czyli Amerykańska Akademia Sztuki i Wiedzy Filmowej. Nie jest to jednak jakby się można było spodziewać szkoła filmowa, a elitarny klub. Akademia została założona w 1927 roku. Miała zrzeszać i moderować środowisko filmowe. Od początku było to stowarzyszenie o elitarnym charakterze, do którego można się dostać jedynie poprzez zaproszenie od przynależących już członków.</p>
-                <p>Do wykonania trójwymiarowej figury wedle projektu Gibbonsa został zatrudniony rzeźbiarz z Los Angeles, George Stanley. Tworzył on w klasycznym stylu i wiele jego rzeźbiarskich kreacji można spotkać rozsianych po całym Los Angeles. W efekcie powstała figurka doskonale korespondująca z estetyką przełomu lat 20. i 30. Nosi te same cechy formalne co choćby film “Metropolis” czy malarstwo Tamary Łempickiej.</p>
-                <div class="image-container">
-                    <img src="Images/oscar1.jpg" alt="Oscar 1">
-                    <img src="Images/oscar2.jpg" alt="Oscar 2">
-                    <img src="Images/oscar3.jpg" alt="Oscar 3">
-                </div>
-            </article>
+            <h3><i>Historia statuetki Oscara</i></h3>
         </div>
-    <footer>
-        <p>Przewodowski Łukasz 169354</p>
-    </footer>
+        <div class="content-container">
+            <p>Amerykańska Akademia Sztuki i Wiedzy Filmowej przyznaje swoje nagrody od <span> 1929 </span> roku i do tej pory rozdała ponad 3100 statuetek, które trafiły w ręce filmowców z całego świata. Nie ulega wątpliwości, że jest to obok Nobla najsłynniejsza nagroda na świecie, a w kategorii filmowej nie ma sobie równych.</p>
+            <p>Pomysłodawcą rozdawania nagród filmowych jest Academy of Motion Picture Arts and Sciences, czyli Amerykańska Akademia Sztuki i Wiedzy Filmowej. Nie jest to jednak jakby się można było spodziewać szkoła filmowa, a elitarny klub. Akademia została założona w <span>1927</span> roku. Miała zrzeszać i moderować środowisko filmowe. Od początku było to stowarzyszenie o elitarnym charakterze, do którego można się dostać jedynie poprzez zaproszenie od przynależących już członków.</p>
+            <p>Do wykonania trójwymiarowej figury wedle projektu Gibbonsa został zatrudniony rzeźbiarz z Los Angeles, George Stanley. Tworzył on w klasycznym stylu i wiele jego rzeźbiarskich kreacji można spotkać rozsianych po całym Los Angeles. W efekcie powstała figurka doskonale korespondująca z estetyką przełomu lat 20. i 30. Nosi te same cechy formalne co choćby film “Metropolis” czy malarstwo Tamary Łempickiej.</p>   
+        </div>
+        <div class="image-container">
+            <img src="Images/oscar1.jpg" alt="Oscar 1">
+            <img src="Images/oscar2.jpg" alt="Oscar 2">
+            <img src="Images/oscar3.jpg" alt="Oscar 3">
+        </div>
+        <div class = "footer-container">
+            <footer>
+                <p>Przewodowski Łukasz 169354</p>
+            </footer>
+        </div>     
 </body>
+</html>
