--- a/lab_1/kontakt.html
+++ b/lab_1/kontakt.html
@@ -18,8 +18,20 @@
             <a href="kontakt.html">Kontakt</a>
         </nav>
     </header>
-
-    <footer>
-        <p>Przewodowski Łukasz 169354</p>
-    </footer>
+    <div class="box">
+        <div class="form-container">
+            <h1>Formularz Kontaktowy</h1>
+            <form>
+                <input type="text" placeholder="Imię: " />
+                <input type="email" placeholder="e-mail: " />
+                <textarea rows="10" placeholder="Pisz tutaj ..."></textarea>
+                <button>Wyślij</button>
+            </form>
+        </div>
+    </div>
+    <div class = "footer-container">
+        <footer>
+            <p>Przewodowski Łukasz 169354</p>
+        </footer>
+    </div>  
 </body>
