--- a/lab_1/kontakt.html
+++ b/lab_1/kontakt.html
@@ -21,7 +21,7 @@
     <div class="box">
         <div class="form-container">
             <h1>Formularz Kontaktowy</h1>
-            <form>
+            <form method="post" action="mailto:169354@student.uwm.edu.pl" enctype="text/plain">
                 <input type="text" placeholder="Imię: " />
                 <input type="email" placeholder="e-mail: " />
                 <textarea rows="10" placeholder="Pisz tutaj ..."></textarea>
